[VAS-912] updated openapi
